--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=crud
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=ives
-spring.datasource.password=senha
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.username=postgres
+spring.datasource.password=123456789
 
 spring.flyway.baseline-on-migrate = true
